Fix menu z-index

--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@ header {
     color:white;
     position:fixed;
     width:100%;
+    z-index:500;
 }
 header h1 {
     font-size:3.5rem;
